expr.make.log
In file included from test.cpp:16:
In file included from ./qtl/expr.h:1:
In file included from ./qtl/interval.h:3:
In file included from ./qtl/number.h:12:
./qtl/string.h:580:2: warning: invalid preprocessing directive, did you mean '#elif'? [-Wunknown-directives]
  580 | #elsif 0
      |  ^~~~~
      |  elif
./qtl/string.h:586:2: warning: invalid preprocessing directive, did you mean '#elif'? [-Wunknown-directives]
  586 | #elsif 0
      |  ^~~~~
      |  elif
In file included from test.cpp:16:
In file included from ./qtl/expr.h:2:
./qtl/tree.h:289:19: error: base class has incomplete type
  289 |   class ob:public operation{
      |            ~~~~~~~^~~~~~~~~
./qtl/tree.h:206:7: note: definition of 'operation<V, V1>' is not complete until the closing '}'
  206 | class operation{
      |       ^
./qtl/tree.h:223:86: error: no member named 'op' in 'operation<V, V1>'
  223 |      ps(const std::string &s,const operation &o):std::string(s),precedence(optable[o.op].precedence){}
      |                                                                                    ~ ^
./qtl/tree.h:926:18: error: base class has incomplete type
  926 |  class ob:public optree{
      |           ~~~~~~~^~~~~~
./qtl/tree.h:847:7: note: definition of 'optree<V, V1>' is not complete until the closing '}'
  847 | class optree:public BASE_T{
      |       ^
./qtl/tree.h:1108:4: error: no member named 'o' in 'qtl::optree<>'
 1108 |    X(<,less)
      |    ^~~~~~~~~
./qtl/tree.h:1073:12: note: expanded from macro 'X'
 1073 |  switch( l.o ){ \
      |          ~ ^
./qtl/tree.h:1108:4: error: no member named 'branches' in 'qtl::optree<>'
 1108 |    X(<,less)
      |    ^~~~~~~~~
./qtl/tree.h:1078:14: note: expanded from macro 'X'
 1078 |    switch( l.branches[1].o ){ \
      |            ~ ^
./qtl/tree.h:1108:4: error: no member named 'branches' in 'qtl::optree<>'
 1108 |    X(<,less)
      |    ^~~~~~~~~
./qtl/tree.h:1084:26: note: expanded from macro 'X'
 1084 |        qtl::expr l1=et(l.branches[1]);                                  \
      |                        ~ ^
./qtl/tree.h:1108:4: error: no member named 'branches' in 'qtl::optree<>'
 1108 |    X(<,less)
      |    ^~~~~~~~~
./qtl/tree.h:1089:64: note: expanded from macro 'X'
 1089 |      return qtl::expr(qtl::op::logical_and, {l, operator O ( l.branches[1],r ) }); \
      |                                                              ~ ^
./qtl/tree.h:1108:4: error: no member named 'branches' in 'qtl::optree<>'
 1108 |    X(<,less)
      |    ^~~~~~~~~
./qtl/tree.h:1101:69: note: expanded from macro 'X'
 1101 |    return qtl::expr(qtl::op::logical_and,{l,qtl::expr(qtl::op::p,{l.branches[1],r})}); \
      |                                                                   ~ ^
./qtl/tree.h:1109:4: error: no member named 'o' in 'qtl::optree<>'
 1109 |    X(<=,less_equal)
      |    ^~~~~~~~~~~~~~~~
./qtl/tree.h:1073:12: note: expanded from macro 'X'
 1073 |  switch( l.o ){ \
      |          ~ ^
./qtl/tree.h:1109:4: error: no member named 'branches' in 'qtl::optree<>'
 1109 |    X(<=,less_equal)
      |    ^~~~~~~~~~~~~~~~
./qtl/tree.h:1078:14: note: expanded from macro 'X'
 1078 |    switch( l.branches[1].o ){ \
      |            ~ ^
./qtl/tree.h:1109:4: error: no member named 'branches' in 'qtl::optree<>'
 1109 |    X(<=,less_equal)
      |    ^~~~~~~~~~~~~~~~
./qtl/tree.h:1084:26: note: expanded from macro 'X'
 1084 |        qtl::expr l1=et(l.branches[1]);                                  \
      |                        ~ ^
./qtl/tree.h:1109:4: error: no member named 'branches' in 'qtl::optree<>'
 1109 |    X(<=,less_equal)
      |    ^~~~~~~~~~~~~~~~
./qtl/tree.h:1089:64: note: expanded from macro 'X'
 1089 |      return qtl::expr(qtl::op::logical_and, {l, operator O ( l.branches[1],r ) }); \
      |                                                              ~ ^
./qtl/tree.h:1109:4: error: no member named 'branches' in 'qtl::optree<>'
 1109 |    X(<=,less_equal)
      |    ^~~~~~~~~~~~~~~~
./qtl/tree.h:1101:69: note: expanded from macro 'X'
 1101 |    return qtl::expr(qtl::op::logical_and,{l,qtl::expr(qtl::op::p,{l.branches[1],r})}); \
      |                                                                   ~ ^
./qtl/tree.h:1110:4: error: no member named 'o' in 'qtl::optree<>'
 1110 |    X(!=,not_equal_to)
      |    ^~~~~~~~~~~~~~~~~~
./qtl/tree.h:1073:12: note: expanded from macro 'X'
 1073 |  switch( l.o ){ \
      |          ~ ^
./qtl/tree.h:1110:4: error: no member named 'branches' in 'qtl::optree<>'
 1110 |    X(!=,not_equal_to)
      |    ^~~~~~~~~~~~~~~~~~
./qtl/tree.h:1078:14: note: expanded from macro 'X'
 1078 |    switch( l.branches[1].o ){ \
      |            ~ ^
./qtl/tree.h:1110:4: error: no member named 'branches' in 'qtl::optree<>'
 1110 |    X(!=,not_equal_to)
      |    ^~~~~~~~~~~~~~~~~~
./qtl/tree.h:1084:26: note: expanded from macro 'X'
 1084 |        qtl::expr l1=et(l.branches[1]);                                  \
      |                        ~ ^
./qtl/tree.h:1110:4: error: no member named 'branches' in 'qtl::optree<>'
 1110 |    X(!=,not_equal_to)
      |    ^~~~~~~~~~~~~~~~~~
./qtl/tree.h:1089:64: note: expanded from macro 'X'
 1089 |      return qtl::expr(qtl::op::logical_and, {l, operator O ( l.branches[1],r ) }); \
      |                                                              ~ ^
./qtl/tree.h:1110:4: error: no member named 'branches' in 'qtl::optree<>'
 1110 |    X(!=,not_equal_to)
      |    ^~~~~~~~~~~~~~~~~~
./qtl/tree.h:1101:69: note: expanded from macro 'X'
 1101 |    return qtl::expr(qtl::op::logical_and,{l,qtl::expr(qtl::op::p,{l.branches[1],r})}); \
      |                                                                   ~ ^
./qtl/tree.h:1111:4: error: no member named 'o' in 'qtl::optree<>'
 1111 |    X(==,equal_to)
      |    ^~~~~~~~~~~~~~
./qtl/tree.h:1073:12: note: expanded from macro 'X'
 1073 |  switch( l.o ){ \
      |          ~ ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 warnings and 20 errors generated.
